--- a/Server/CentralServer/CentralServerApp/CentralServerApp.csproj
+++ b/Server/CentralServer/CentralServerApp/CentralServerApp.csproj
@@ -107,6 +107,10 @@
       <Project>{125a2c8a-8f8c-4546-bb44-3688aa1ca7dd}</Project>
       <Name>CoreModule</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Common\EBNFQueryAnalyzer\EBNFQueryAnalyzer.csproj">
+      <Project>{eea8a3c5-c1ff-44fa-bbe6-c72603c8c69d}</Project>
+      <Name>EBNFQueryAnalyzer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Common\ExecutionPlanner\ExecutionPlanner.csproj">
       <Project>{e53da5fa-e552-4bb2-ba6c-11d406cbd264}</Project>
       <Name>ExecutionPlanner</Name>
