--- a/Server/Common/EBNFQueryAnalyzer/EBNFQueryAnalyzer.csproj
+++ b/Server/Common/EBNFQueryAnalyzer/EBNFQueryAnalyzer.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="QueryParserErrorListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuerryTree.cs" />
     <Compile Include="QueryAnalyzer.cs" />
