Dorobienie nowego selecta

--- a/Common/ModuleBase/ModuleBase.csproj
+++ b/Common/ModuleBase/ModuleBase.csproj
@@ -45,7 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Communication\ElementType.cs" />
     <Compile Include="Communication\ICentralServerContract.cs" />
+    <Compile Include="Communication\IQueryElement.cs" />
+    <Compile Include="Communication\QueryDTO.cs" />
+    <Compile Include="Communication\QueryParameters.cs" />
     <Compile Include="Communication\QueryTreeDTO.cs" />
     <Compile Include="Indexing\CompareType.cs" />
     <Compile Include="ICore.cs" />
