--- a/OdraIDE/OdraIDE.SolutionExplorer.Connections/OdraIDE.SolutionExplorer.Connections.csproj
+++ b/OdraIDE/OdraIDE.SolutionExplorer.Connections/OdraIDE.SolutionExplorer.Connections.csproj
@@ -126,6 +126,10 @@
       <Project>{02C7D2E4-48B6-4C3E-89F4-F15A09DEE23F}</Project>
       <Name>ModuleBase</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Server\Common\CoreModule\CoreModule.csproj">
+      <Project>{125A2C8A-8F8C-4546-BB44-3688AA1CA7DD}</Project>
+      <Name>CoreModule</Name>
+    </ProjectReference>
     <ProjectReference Include="..\OdraIDE.Core.Contracts\OdraIDE.Core.Contracts.csproj">
       <Project>{767995F7-22A5-44C5-878E-B94173BB41B9}</Project>
       <Name>OdraIDE.Core.Contracts</Name>
