--- a/Server/DataServer/DSODBC/DSODBC.csproj
+++ b/Server/DataServer/DSODBC/DSODBC.csproj
@@ -64,6 +64,10 @@
       <Project>{02C7D2E4-48B6-4C3E-89F4-F15A09DEE23F}</Project>
       <Name>ModuleBase</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Common\CoreModule\CoreModule.csproj">
+      <Project>{125A2C8A-8F8C-4546-BB44-3688AA1CA7DD}</Project>
+      <Name>CoreModule</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
