--- a/Server/Common/CoreModule/CoreModule.csproj
+++ b/Server/Common/CoreModule/CoreModule.csproj
@@ -37,6 +37,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Communication\ICentralServerContract.cs" />
+    <Compile Include="Communication\IDataServerContract.cs" />
+    <Compile Include="Communication\IInternalCommunicator.cs" />
+    <Compile Include="Communication\QueryTreeDTO.cs" />
     <Compile Include="Core.cs" />
     <Compile Include="ModuleManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -53,9 +59,17 @@
       <Project>{BE68C4B8-B4CA-40C5-8A80-36EA5BEB3876}</Project>
       <Name>Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Common\Communication\Communication.csproj">
+      <Project>{3A423D5E-E45E-4D30-9F20-06F0527B38F3}</Project>
+      <Name>Communication</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Common\ModuleBase\ModuleBase.csproj">
       <Project>{02C7D2E4-48B6-4C3E-89F4-F15A09DEE23F}</Project>
       <Name>ModuleBase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QueryTree\QueryTree.csproj">
+      <Project>{d5e93d78-e622-491b-bc54-a0bd3ce37e67}</Project>
+      <Name>QueryTree</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
