--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AbstractLeaf.cs" />
     <Compile Include="ClassName.cs" />
     <Compile Include="ClassProperty.cs" />
+    <Compile Include="DropDatabase.cs" />
     <Compile Include="RenameDatabase.cs" />
     <Compile Include="CreateDatabase.cs" />
     <Compile Include="LeftOperand.cs" />
@@ -91,6 +92,10 @@
     <ProjectReference Include="..\..\..\Common\Types\Types.csproj">
       <Project>{6F59E8E0-D8C9-438C-AE4C-7F5C08A99DB4}</Project>
       <Name>Types</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Storage\Storage\Storage.csproj">
+      <Project>{ECA1C184-3217-464E-A32E-48132CAE47BB}</Project>
+      <Name>Storage</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
