--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -51,6 +51,8 @@
     <Compile Include="ClassProperty.cs" />
     <Compile Include="DropClass.cs" />
     <Compile Include="DropDatabase.cs" />
+    <Compile Include="NewObject.cs" />
+    <Compile Include="ObjectInitializationElement.cs" />
     <Compile Include="RenameDatabase.cs" />
     <Compile Include="CreateDatabase.cs" />
     <Compile Include="LeftOperand.cs" />
