--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -56,6 +56,8 @@
     <Compile Include="ClassProperty.cs" />
     <Compile Include="DropClass.cs" />
     <Compile Include="DropDatabase.cs" />
+    <Compile Include="ObjectUpdateElement.cs" />
+    <Compile Include="UpdateObject.cs" />
     <Compile Include="NewObject.cs" />
     <Compile Include="ObjectInitializationElement.cs" />
     <Compile Include="ParentClasses.cs" />
