--- a/Server/Common/IndexMechanism/IndexPlugin/IndexPlugin.csproj
+++ b/Server/Common/IndexMechanism/IndexPlugin/IndexPlugin.csproj
@@ -138,6 +138,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Common\Communication\Communication.csproj">
+      <Project>{3a423d5e-e45e-4d30-9f20-06f0527b38f3}</Project>
+      <Name>Communication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Common\ModuleBase\ModuleBase.csproj">
+      <Project>{02c7d2e4-48b6-4c3e-89f4-f15a09dee23f}</Project>
+      <Name>ModuleBase</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\Common\Types\Types.csproj">
       <Project>{6f59e8e0-d8c9-438c-ae4c-7f5c08a99db4}</Project>
       <Name>Types</Name>
