--- a/Server/Common/ExecutionPlanner/QueryOptimizer.csproj
+++ b/Server/Common/ExecutionPlanner/QueryOptimizer.csproj
@@ -52,6 +52,21 @@
       <Project>{02C7D2E4-48B6-4C3E-89F4-F15A09DEE23F}</Project>
       <Name>ModuleBase</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\ServerStats\ServerStats.csproj">
+      <Project>{94db7608-fa8b-4e44-942a-2b4bf292a482}</Project>
+      <Name>ServerStats</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IndexMechanism\IndexPlugin\IndexPlugin.csproj">
+      <Project>{C2E17710-7C4F-45A3-89D9-D8D467C84B6F}</Project>
+      <Name>IndexPlugin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QueryTree\QueryTree.csproj">
+      <Project>{D5E93D78-E622-491B-BC54-A0BD3CE37E67}</Project>
+      <Name>QueryTree</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="util\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
