--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -50,6 +50,9 @@
     <Compile Include="AttributeDeclaration.cs" />
     <Compile Include="AlterInterface.cs" />
     <Compile Include="DropInterface.cs" />
+    <Compile Include="CreateIndex.cs" />
+    <Compile Include="IndexAttribute.cs" />
+    <Compile Include="IndexName.cs" />
     <Compile Include="InterfaceDeclaration.cs" />
     <Compile Include="ClassDeclaration.cs" />
     <Compile Include="ClassName.cs" />
@@ -120,9 +123,21 @@
       <Project>{6F59E8E0-D8C9-438C-AE4C-7F5C08A99DB4}</Project>
       <Name>Types</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IndexMechanism\IndexMechanism\IndexMechanism.csproj">
+      <Project>{f60f8089-adb9-4d93-bf8a-059af83e3193}</Project>
+      <Name>IndexMechanism</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\IndexMechanism\IndexPlugin\IndexPlugin.csproj">
+      <Project>{c2e17710-7c4f-45a3-89d9-d8d467c84b6f}</Project>
+      <Name>IndexPlugin</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Storage\Storage\Storage.csproj">
       <Project>{ECA1C184-3217-464E-A32E-48132CAE47BB}</Project>
       <Name>Storage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tools\Logger\Logger.csproj">
+      <Project>{a2e33731-8ec1-46ad-9156-1378edaeab44}</Project>
+      <Name>Logger</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
